Fix scrollbar jankiness in Firefox.

--- a/bootstrap/bootstrap.scss
+++ b/bootstrap/bootstrap.scss
@@ -3,6 +3,7 @@
 $enable-shadows: true;
 $enable-gradients: true;
 $enable-transitions: false;
+$enable-rfs: false;
 $enable-smooth-scroll: false;
 
 @import 'node_modules/bootstrap/scss/bootstrap';
