--- a/extension/css/main.css
+++ b/extension/css/main.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow: hidden;
+  scrollbar-width: none;
+}
 body {
   width: 550px;
   min-height: 370px;
